# vtplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: building.md  configuration.md  keybindings.md
src/: CMakeLists.txt  main.cpp
src/app/: Application.cpp  Application.h
src/audio/: AudioEngine.cpp  AudioEngine.h  Fft.h  RingBuffer.h  TrackInfo.h
src/config/: Config.cpp  Config.h
src/view/: ContextMenu.cpp  ContextMenu.h  FileBrowser.cpp  FileBrowser.h  HeaderBar.cpp  HeaderBar.h  PlaylistView.cpp  PlaylistView.h  Theme.h  TransportBar.cpp  TransportBar.h  VisualizerView.cpp  VisualizerView.h
src/visualizer/: AudioSpectrum.cpp  AudioSpectrum.h  Visualizer.h
